src/styles/home.css
body {
    padding: 0;
    margin: 0;
}

textarea:focus,
input:focus {
    outline: none;
}

.homeContainer {
    width: 100%;
    min-height: 475px;
    max-height: 475px;
    background: url('./house1.jpg') center no-repeat;
    background-size: cover;
}

.videoSection {
    width: 100%;
    min-height: 475px;
    max-height: 475px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.searchBoxHeader {
    width: 600px;
    height: 8vh;
    font-size: 20px;
    padding-bottom: 30px;
    /*font-weight: 300;*/
    text-align: center;
    /*text-shadow: 0 0 4px #666;*/
    color: white;
    display: flex;
    justify-content: center;
    align-content: center;
}

.searchBox {
    width: 700px;
    height: 30vh;
    background-color: transparent;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-content: center;
}

.searchBody {
    width: 700px;
    height: 20vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
}

.buy,
.rent,
.sell,
.zestimate {
    width: 150px;
    height: 37px;
    text-align: center;
    padding: 10px 0 0;
    margin-bottom: 20px;
    position: static;
    left: auto;
    font-size: 18px;
    background-color: rgba(0,0,0,.5);
    color: #fff;
    border: solid rgba(255,255,255,.75);
    border-width: 1px;
    display: flex;
    justify-content: center;
    align-content: center;
}

.buy:hover,
.rent:hover,
.sell:hover,
.zestimate:hover {
    color: #fff!important;
    background-color: rgba(0,116,228,.75);
    border: solid #fff;
    border-width: 1px;
}

.searchInputAndButton {
    width: 700px;
    display: flex;
    position: relative;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-bottom: 100px;
}

.searchInput {
    width: 590px;
    height: 60px;
    background-color: white;
    text-align: left;
    color: black;
    border-radius: 7px;
    border: none;
    font-size: 18px;
    padding-left: 20px;
}

.searchButton {
    position: absolute;
    margin-left: 19%;
    background-color: #0074e4;
    width: 108px;
    height: 45px;
    border: none;
    border-radius: 7px;
    color: white;
    text-align: center;
    font-size: 15px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    right: 55px;
}

.searchBtnText {
    width: 98px;
    text-align: center;
    font-size: 14.5px;
}

